--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
-URL=https://atlasbus.by/Маршруты/Минск/Свислочь?date=2022-12-31&passengers=1&from=c625144&to=c627904
-
-# Interval in secs
-REQUEST_INTERVAL=30
-
 DEBUG=0
 TO_FILE=0
+
+# Parser settings
+URL=https://atlasbus.by/Маршруты/{}/{}?date={}&passengers=1&from=c625144&to=c627904
+REQUEST_INTERVAL=30
 
 
 # Telegram settings
